--- a/index.html
+++ b/index.html
@@ -3,20 +3,141 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Try It Free
+    <header>
+        <img src="./images/logo.svg" alt="header logo image">
+        <a href="#">Try It Free</a>
+    </header>
+
+    <section>
+        <div>
+            <h1>Build The Community <br>Your Fans Will Love</h1>
+            <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
+            <button>Get Started For Free</button>
+        </div>
+        <img src="./images/illustration-mockups.svg" alt="introduction mockup image">
+    </section>
+
+    <section>
+        <div>
+            <img src="./images/illustration-grow-together.svg" alt="grow">
+            <h2>Grow Together</h2>
+            <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+        </div>
+        <div>
+            <img src="./images/illustration-flowing-conversation.svg" alt="conversation">
+            <h2>Flowing Conversations</h2>
+            <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+        </div>
+        <div>
+            <img src="./images/illustration-your-users.svg" alt="">
+            <h2>Your Users</h2>
+            <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+        </div>
+    </section>
+
+    <div>
+        <h2>Ready To Build Your Community?</h2>
+        <button>Get Started For Free</button>
+    </div>
+
+    <footer>
+
+        <div>
+            <img src="./images/logo.svg" alt="footer logo image">
+            <div>
+                <img src="./images/icon-location.svg" alt="location">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            </div>
+            <div>
+                <img src="./images/icon-phone.svg" alt="phone">
+                <p>+1-543-123-4567</p>
+            </div>
+            <div>
+                <img src="./images/icon-email.svg" alt="email">
+                <p>example@huddle.com</p>
+            </div>
+        </div>
+
+        <div>
+            <a href="#">About Us</a>
+            <a href="#">What We Do</a>
+            <a href="#">FAQ</a>
+        </div>
+
+        <div>
+            <a href="#">Career</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact Us</a>
+        </div>
+
+        <div>
+            <a href="https://facebook.com/">
+                <img src="./images/facebook.png" alt="facebook logo">
+            </a>
+            <a href="https://twitter.com/">
+                <img src="./images/twitter.png" alt="twitter logo">
+            </a>
+            <a href="https://instagram.com/">
+                <img src="./images/instagram.png" alt="instagram logo">
+            </a>
+
+            <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
+        </div>
+
+    </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- Try It Free
 
   Build The Community Your Fans Will Love
 
@@ -58,13 +179,14 @@
   Blog
   Contact Us
 
-  &copy; Copyright 2018 Huddle. All rights reserved.
+  &copy; Copyright 2018 Huddle. All rights reserved. -->
 
-  <footer>
+  <!-- <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p>
-  </footer>
+  </footer> -->
+
 </body>
 </html>
