--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
 </head>
 <body>
 
-    <header>
-        <img src="./images/logo.svg" alt="header logo image">
-        <a href="#">Try It Free</a>
-    </header>
+    <!-- <div class="light-blue-background"> -->
+        <header>
+            <img src="./images/logo.svg" alt="header logo image">
+            <a href="#">Try It Free</a>
+        </header>
 
-    <section>
-        <div>
-            <h1>Build The Community <br>Your Fans Will Love</h1>
-            <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
-            <button>Get Started For Free</button>
-        </div>
-        <img src="./images/illustration-mockups.svg" alt="introduction mockup image">
-    </section>
+        <section>
+            <div class="section-1-info">
+                <h1>Build The Community <br>Your Fans Will Love</h1>
+                <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
+                <a href="#">Get Started For Free</a>
+            </div>
+            <img src="./images/illustration-mockups.svg" alt="introduction mockup image">
+        </section>
+    <!-- </div> -->
 
     <section>
         <div>
