Mobile design almost finished

--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 
 </head>
 <body>
-
-    <!-- <div class="light-blue-background"> -->
+    <!-- <div class="container"> -->
         <header>
             <img src="./images/logo.svg" alt="header logo image">
             <a href="#">Try It Free</a>
         </header>
 
-        <section>
+        <section class="section-1">
             <div class="section-1-info">
                 <h1>Build The Community <br>Your Fans Will Love</h1>
                 <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
@@ -29,166 +28,76 @@
             </div>
             <img src="./images/illustration-mockups.svg" alt="introduction mockup image">
         </section>
-    <!-- </div> -->
 
-    <section>
-        <div>
+
+    <section class="section-2">
+        <div class="section-2-info">
             <img src="./images/illustration-grow-together.svg" alt="grow">
-            <h2>Grow Together</h2>
+            <h3>Grow Together</h3>
             <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
         </div>
-        <div>
+        <div class="section-2-info">
             <img src="./images/illustration-flowing-conversation.svg" alt="conversation">
-            <h2>Flowing Conversations</h2>
+            <h3>Flowing Conversations</h3>
             <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
         </div>
-        <div>
+        <div class="section-2-info">
             <img src="./images/illustration-your-users.svg" alt="">
-            <h2>Your Users</h2>
+            <h3>Your Users</h3>
             <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
         </div>
     </section>
 
-    <div>
-        <h2>Ready To Build Your Community?</h2>
-        <button>Get Started For Free</button>
+    <div class="community">
+        <h3>Ready To Build Your Community?</h3>
+        <a href="#">Get Started For Free</a>
     </div>
 
     <footer>
-
-        <div>
+        <div class="contact-container">
             <img src="./images/logo.svg" alt="footer logo image">
-            <div>
+            <div class="footer-contact">
                 <img src="./images/icon-location.svg" alt="location">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
             </div>
-            <div>
+            <div class="footer-contact">
                 <img src="./images/icon-phone.svg" alt="phone">
                 <p>+1-543-123-4567</p>
             </div>
-            <div>
+            <div class="footer-contact">
                 <img src="./images/icon-email.svg" alt="email">
                 <p>example@huddle.com</p>
             </div>
         </div>
 
-        <div>
+        <div class="footer-link">
             <a href="#">About Us</a>
             <a href="#">What We Do</a>
             <a href="#">FAQ</a>
         </div>
 
-        <div>
+        <div class="footer-link">
             <a href="#">Career</a>
             <a href="#">Blog</a>
             <a href="#">Contact Us</a>
         </div>
 
-        <div>
-            <a href="https://facebook.com/">
-                <img src="./images/facebook.png" alt="facebook logo">
-            </a>
-            <a href="https://twitter.com/">
-                <img src="./images/twitter.png" alt="twitter logo">
-            </a>
-            <a href="https://instagram.com/">
-                <img src="./images/instagram.png" alt="instagram logo">
-            </a>
+        <div class="socials">
+            <div class="socials-image">
+                <a href="https://facebook.com/">
+                    <img src="./images/facebook.svg" alt="facebook logo">
+                </a>
+                <a href="https://twitter.com/">
+                    <img src="./images/twitter.svg" alt="twitter logo">
+                </a>
+                <a href="https://instagram.com/">
+                    <img src="./images/instagram.svg" alt="instagram logo">
+                </a>
+            </div>
 
             <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
         </div>
-
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- Try It Free
-
-  Build The Community Your Fans Will Love
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Get Started For Free
-
-  Grow Together
-
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-
-  Flowing Conversations
-
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
-
-  Your Users
-
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-  incididunt ut labore et dolore magna aliqua
-
-  +1-543-123-4567
-  example@huddle.com
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  &copy; Copyright 2018 Huddle. All rights reserved. -->
-
-  <!-- <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer> -->
-
+    <!-- </div> -->
 </body>
 </html>
