Mobile Design Finished

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <!-- <div class="container"> -->
+    <div class="top-section-background">
         <header>
             <img src="./images/logo.svg" alt="header logo image">
             <a href="#">Try It Free</a>
@@ -28,6 +29,7 @@
             </div>
             <img src="./images/illustration-mockups.svg" alt="introduction mockup image">
         </section>
+    </div>
 
 
     <section class="section-2">
@@ -55,7 +57,7 @@
 
     <footer>
         <div class="contact-container">
-            <img src="./images/logo.svg" alt="footer logo image">
+            <img class="footer-logo" src="./images/footer-logo.svg" alt="footer logo image">
             <div class="footer-contact">
                 <img src="./images/icon-location.svg" alt="location">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
@@ -70,16 +72,18 @@
             </div>
         </div>
 
-        <div class="footer-link">
-            <a href="#">About Us</a>
-            <a href="#">What We Do</a>
-            <a href="#">FAQ</a>
-        </div>
+        <div class="footer-link-container">
+            <div class="footer-link">
+                <a href="#">About Us</a>
+                <a href="#">What We Do</a>
+                <a href="#">FAQ</a>
+            </div>
 
-        <div class="footer-link">
-            <a href="#">Career</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact Us</a>
+            <div class="footer-link">
+                <a href="#">Career</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact Us</a>
+            </div>
         </div>
 
         <div class="socials">
