Worked on desktop design

--- a/index.html
+++ b/index.html
@@ -34,19 +34,31 @@
 
     <section class="section-2">
         <div class="section-2-info">
-            <img src="./images/illustration-grow-together.svg" alt="grow">
-            <h3>Grow Together</h3>
-            <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+            <div class="first">
+                <img src="./images/illustration-grow-together.svg" alt="grow">
+            </div>
+            <div class="second">
+                <h3>Grow Together</h3>
+                <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+            </div>
         </div>
         <div class="section-2-info">
-            <img src="./images/illustration-flowing-conversation.svg" alt="conversation">
-            <h3>Flowing Conversations</h3>
-            <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+            <div class="first">
+                <img src="./images/illustration-flowing-conversation.svg" alt="conversation">
+            </div>
+            <div class="second">
+                <h3>Flowing Conversations</h3>
+                <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+            </div>
         </div>
         <div class="section-2-info">
-            <img src="./images/illustration-your-users.svg" alt="">
-            <h3>Your Users</h3>
-            <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+            <div class="first">
+                <img src="./images/illustration-your-users.svg" alt="">
+            </div>
+            <div class="second">
+                <h3>Your Users</h3>
+                <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+            </div>
         </div>
     </section>
 
