--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="section-2-info">
-            <div class="first">
+            <div class="no-reverse">
                 <img src="./images/illustration-flowing-conversation.svg" alt="conversation">
             </div>
             <div class="second">
@@ -63,8 +63,10 @@
     </section>
 
     <div class="community">
-        <h3>Ready To Build Your Community?</h3>
-        <a href="#">Get Started For Free</a>
+        <div class="community-content">
+            <h3>Ready To Build Your Community?</h3>
+            <a href="#">Get Started For Free</a>
+        </div>
     </div>
 
     <footer>
