Worked on last details

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                 <img src="./images/icon-location.svg" alt="location">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
             </div>
-            <div class="footer-contact">
+            <div class="footer-contact footer-contact-middle">
                 <img src="./images/icon-phone.svg" alt="phone">
                 <p>+1-543-123-4567</p>
             </div>
-            <div class="footer-contact">
+            <div class="footer-contact footer-contact-last">
                 <img src="./images/icon-email.svg" alt="email">
                 <p>example@huddle.com</p>
             </div>
